--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@adminjs/express": "^6.0.1",
     "@adminjs/mongoose": "^4.0.0",
+    "@types/express": "^4.17.20",
+    "@types/mongoose": "^5.11.97",
     "adminjs": "^7.3.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
@@ -24,5 +26,8 @@
     "nodemon": "^3.0.1",
     "router": "^1.3.8",
     "routers": "^0.1.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
