--- a/clientBlogs/package.json
+++ b/clientBlogs/package.json
@@ -4,9 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ap.cx/react-fullpage": "^0.3.0",
     "@coreui/react": "^4.11.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fullpage/react-fullpage": "^0.1.40",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "@nextui-org/react": "^2.1.13",
