--- a/clientBlogs/package.json
+++ b/clientBlogs/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "dom": "^0.0.3",
     "embla-carousel-autoplay": "^8.0.0-rc14",
     "embla-carousel-react": "^8.0.0-rc14",
@@ -25,7 +26,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0",
+    "react-hot-toast": "^2.4.1",
     "react-native": "^0.72.6",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
