--- a/clientBlogs/package.json
+++ b/clientBlogs/package.json
@@ -12,6 +12,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
     "@nextui-org/react": "^2.1.13",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -22,6 +23,7 @@
     "dom": "^0.0.3",
     "embla-carousel-autoplay": "^8.0.0-rc14",
     "embla-carousel-react": "^8.0.0-rc14",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
