--- a/clientBlogs/package.json
+++ b/clientBlogs/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-native": "^0.72.6",
+    "react-notifications-component": "^4.0.1",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.2",
