--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@adminjs/express": "^6.0.1",
+    "@adminjs/mongoose": "^4.0.0",
+    "adminjs": "^7.3.1",
     "alert": "^6.0.1",
     "react-notifications-component": "^4.0.1"
   }
