--- a/clientBlogs/package.json
+++ b/clientBlogs/package.json
@@ -3,8 +3,6 @@
   "proxy": "http://localhost:8080",
   "version": "0.1.0",
   "private": true,
-  
-
   "dependencies": {
     "@ap.cx/react-fullpage": "^0.3.0",
     "@coreui/react": "^4.11.0",
@@ -29,6 +27,7 @@
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons-kit": "^2.0.0",
