--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@adminjs/mongoose": "^4.0.0",
     "adminjs": "^7.3.1",
     "alert": "^6.0.1",
+    "react-burger-menu": "^3.0.9",
     "react-notifications-component": "^4.0.1"
   }
 }
