--- a/clientBlogs/package.json
+++ b/clientBlogs/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons-kit": "^2.0.0",
+    "react-markdown": "^9.0.1",
     "react-native": "^0.72.6",
     "react-notifications-component": "^4.0.1",
     "react-redux": "^8.0.5",
