--- a/.github/workflows/clientBlogs.yml
+++ b/.github/workflows/clientBlogs.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Connect to EC2 instance
         run: |
           echo "Connecting to EC2 instance..."
-          ssh -i "Collab_Hous.pem" ubuntu@ec2-13-232-242-124.ap-south-1.compute.amazonaws.com
+          ssh -i ${{ secrets.EC2_SSH_KEY }} ubuntu@ec2-13-232-242-124.ap-south-1.compute.amazonaws.com
       - name: Transfer build artifacts
         run: |
           echo "Transferring build artifacts..."
@@ -41,4 +41,4 @@ jobs:
       - name: Deploy application and restart service
         run: |
           echo "Deploying application..."
-          ssh -i "Collab_Hous.pem" ubuntu@ec2-13-232-242-124.ap-south-1.compute.amazonaws.com "sudo systemctl restart your-service"
+          ssh -i ${{ secrets.EC2_SSH_KEY }} ubuntu@ec2-13-232-242-124.ap-south-1.compute.amazonaws.com "sudo systemctl restart your-service"
