--- a/.github/workflows/clientBlogs.yml
+++ b/.github/workflows/clientBlogs.yml
@@ -14,8 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Clear cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
       - name: Change directory to clientBlogs
-        run: cd clientBlogs & ls             
+        run: cd clientBlogs
+      - name: Verify working directory
+        run: pwd
       - name: Install dependencies
         run: npm install
       - name: Build React application
