--- a/.github/workflows/clientBlogs.yml
+++ b/.github/workflows/clientBlogs.yml
@@ -23,6 +23,10 @@ jobs:
         run: ls
       - name: Verify working directory
         run: pwd
+      - name: changing dir
+        run: cd /home/runner/work/CollabHous_Combined/CollabHous_Combined/clientBlogs/
+      - name: checking if moved or not
+        run : ls & pwd
       - name: Install dependencies
         run: npm install
       - name: Build React application
