--- a/clientBlogs/.env
+++ b/clientBlogs/.env
@@ -1,2 +1,2 @@
-REACT_APP_FRONTEND_URL=http://localhost:3000
-REACT_APP_BACKEND_URL=http://localhost:5000
+REACT_APP_FRONTEND_URL=http://13.232.242.124/
+REACT_APP_BACKEND_URL=http://13.232.242.124:5000
