--- a/clientBlogs/package.json
+++ b/clientBlogs/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object":"^7.21.0",
     "@ap.cx/react-fullpage": "^0.3.0",
     "@coreui/react": "^4.11.0",
     "@emotion/react": "^11.10.6",
