--- a/clientBlogs/package.json
+++ b/clientBlogs/package.json
@@ -42,6 +42,8 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-share": "^4.4.1",
+    "remark-images": "^4.0.0",
+    "remark-react": "^9.0.1",
     "rsuite": "^5.42.0",
     "web-vitals": "^2.1.4"
   },
