--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.20",
     "@types/mongoose": "^5.11.97",
     "adminjs": "^7.3.0",
+    "aws-sdk": "^2.1526.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
