--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "router": "^1.3.8",
-    "routers": "^0.1.4"
+    "routers": "^0.1.4",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2"
